<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".activities.NetworkScanActivity">

    <!-- Rainbow Background -->
    <com.hyperion.grabber.common.views.SweepGradientView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scanner_title"
        android:textSize="32sp"
        android:textColor="@color/text_primary"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/networkScanIcon"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/networkScanIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:tint="@color/accent_secondary"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/scannerDescriptionText"
        app:srcCompat="@drawable/ic_network_scan" />

    <TextView
        android:id="@+id/scannerDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/scanner_description"
        android:textSize="18sp"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/networkScanIcon" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:progressTint="@color/accent_primary"
        android:progressBackgroundTint="@color/surface_light"
        app:layout_constraintBottom_toTopOf="@id/startScanButton"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/scannerDescriptionText" />

    <Button
        android:id="@+id/startScanButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="48dp"
        android:background="@drawable/button_primary"
        android:text="@string/scanner_start_scan_button"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:focusable="true"
        android:nextFocusDown="@id/manualSetupButton"
        app:layout_constraintBottom_toTopOf="@+id/manualSetupButton"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/manualSetupButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="32dp"
        android:background="@drawable/button_secondary"
        android:text="@string/scanner_manual_setup_button"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:focusable="true"
        android:nextFocusUp="@id/startScanButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/startScanButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>